--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "co:login": "aws codeartifact login --tool npm --repository clappia --domain clappia"
   },
   "private": true,
   "dependencies": {
